Task management (#4)
* Create new task endpoint

* Adds get task by id endpoint

* Adds the fetch all tasks endpoint

* Adds the update task endpoint

* Adds the delete task endpoint
