# src/@types/api/update-task-request-body.ts
@@ -1,0 +1,6 @@
+import { TaskStatus } from '../../db/@types/task-status';
+
+export interface UpdateTaskRequestBody {
+  summary?: string;
+  status?: TaskStatus;
+}
